tests/typechecker/should_fail/dot_operator_function_application.csp
datatype Z = B.{0..1}
	
g(x.y) = y

z = g(B)
